--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,12 @@ project(PokemonVideogame)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Bullet.h Character.cpp Character.h Collision.cpp Collision.h Graphic.cpp Graphic.h Item.cpp Item.h NPC.cpp NPC.h
-        Player.cpp Player.h Pokemon.cpp Pokemon.h SpecialAttack.h TileMap.cpp TileMap.h)
+set(SOURCE_FILES main.cpp Bullet.cpp Bullet.h Character.cpp Character.h Collision.cpp Collision.h Graphic.cpp Graphic.h Item.cpp Item.h
+        NPC.cpp NPC.h Player.cpp Player.h Pokemon.cpp Pokemon.h SpecialAttack.h TileMap.cpp TileMap.h PokemonFactory.cpp PokemonFactory.h
+        WaterPokemon.cpp WaterPokemon.h FirePokemon.cpp FirePokemon.h ElectricPokemon.cpp ElectricPokemon.h)
 add_executable(PokemonVideogame ${SOURCE_FILES})
 
-add_library(core ${SOURCE_FILES} hfhx.h)
+add_library(core ${SOURCE_FILES})
 target_link_libraries(PokemonVideogame core)
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
