General review made

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ add_subdirectory(testDirectory)
 
 set(SFML_ROOT C:/Users/Niki/SFML)
 
-set(SOURCE_FILES main.cpp Bullet.cpp Bullet.h Character.cpp Character.h Collision.cpp Collision.h Graphic.cpp Graphic.h
-        Item.cpp Item.h NPC.cpp NPC.h Player.cpp Player.h Pokemon.cpp Pokemon.h PokemonFactory.cpp PokemonFactory.h WaterPokemon.h
+set(SOURCE_FILES main.cpp Bullet.cpp Bullet.h Character.h Collision.cpp Collision.h Graphic.cpp Graphic.h
+        Item.h NPC.cpp NPC.h Player.cpp Player.h Pokemon.cpp Pokemon.h PokemonFactory.cpp PokemonFactory.h WaterPokemon.h
         FirePokemon.h ElectricPokemon.h WaterBullet.h FireBullet.h GraphicPokemon.cpp GraphicPokemon.h GrassPokemon.h Settings.cpp
         Settings.h GrassBullet.h ElectricBullet.h Text.cpp Text.h Map.cpp Map.h)
 add_executable(PokemonVideogame ${SOURCE_FILES})
